Version: 4.1.15
Date: 2022.01.XX
  Bugfixes:
    - Fix compressed buildings using +1 tier more power than they should
    - Fix missing overlay on condensator fluids
    - Fix lack of compressed boilers with omnifluid
  Changes:
    - Added descriptions to condensator/concentrator
    - Changed compressed tech formulae not to overload labs with massive stack sizes
---------------------------------------------------------------------------------------------------
Version: 4.1.14
Date: 2022.01.04
  Changes:
    - Integer settings now use dropdowns to clearly display constrained values
  Bugfixes:
    - Fix error when certain settings were changed to invalid-but-technically-allowed values
---------------------------------------------------------------------------------------------------
Version: 4.1.13
Date: 2021.12.14
  Bugfixes:
    - Fixed an issue with certain modded science packs not being compressed
---------------------------------------------------------------------------------------------------
Version: 4.1.12
Date: 2021.12.02
  Features:
    - LightedPolesPlus (LEP+) support for compressed poles
  Bugfixes:
    - Fix improperly excluding some recipes with the keywords "concentrate" or "compression"
    - Fix error when handling fluids without explicit temperatures
    - Fix missing fluid recipes if offshore pump produces something other than water
---------------------------------------------------------------------------------------------------
Version: 4.1.11
Date: 2021.10.27
  Features:
    - Compressed roboports (robots soon™)
  Changes:
    - Allow switching fixed recipes to compressed variants in some cases
    - Improve lab scaling
  Bugfixes:
    - Move module checks later to fix some missing/incorrect limits
---------------------------------------------------------------------------------------------------
Version: 4.1.10
Date: 2021.09.01
  Features:
    - Compressed fluids with temperatures
  Changes:
    - Better visibly for decompression icons